--- a/Translator/Info.plist
+++ b/Translator/Info.plist
@@ -51,5 +51,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>UIUserInterfaceStyle</key>
+    <string>light</string>
 </dict>
 </plist>
